duchain/pythonducontext.h
@@ -40,7 +40,8 @@ public:
         static_cast<KDevelop::DUChainBase*>(this)->d_func_dynamic()->setClassId(this);
     }
     
-    virtual QWidget* createNavigationWidget(KDevelop::Declaration* decl, KDevelop::TopDUContext* topContext, const QString& htmlPrefix, const QString& htmlSuffix) const;
+    virtual QWidget* createNavigationWidget(KDevelop::Declaration* decl, KDevelop::TopDUContext* topContext, 
+                                            const QString& htmlPrefix, const QString& htmlSuffix) const;
     
     enum {
         Identity = IdentityT
